# hiko

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SYSTEM.md  hiko-harness.toml  hiko.lock.toml  hiko.toml  initial.md  mise.toml  package.json  test_hashline.hml
benchmarks/: ack.hml  ec_ack.hml  ec_fib.hml  nqueens.hml  primes.hml  tak.hml
crates/hiko-builtin-meta/: Cargo.toml
crates/hiko-builtin-meta/src/: aws_config.rs  aws_s3.rs  bytes.rs  convert.rs  env.rs  exec.rs  filesystem.rs  hash.rs  http.rs  internal.rs  json.rs  lib.rs  math.rs  path.rs  process.rs  random.rs  regex.rs  signatures.rs  stdio.rs  string.rs  system.rs  testing.rs  time.rs
crates/hiko-cli/: Cargo.toml
crates/hiko-cli/src/: lock_verify.rs  main.rs
crates/hiko-common/: Cargo.toml
crates/hiko-common/src/: hash.rs  http.rs  lib.rs
crates/hiko-compile/: Cargo.toml
crates/hiko-compile/src/: chunk.rs  compiler.rs  lib.rs  op.rs
crates/hiko-docgen/: Cargo.toml
crates/hiko-docgen/src/: main.rs
crates/hiko-harness/: Cargo.toml
crates/hiko-harness/src/: agent.rs  config.rs  llm.rs  main.rs  tools.rs
crates/hiko-syntax/: Cargo.toml
crates/hiko-syntax/benches/: syntax_bench.rs
crates/hiko-syntax/fuzz/: Cargo.toml
crates/hiko-syntax/fuzz/corpus/fuzz_lexer/: basic.txt
crates/hiko-syntax/fuzz/corpus/fuzz_parser/: basic.txt
crates/hiko-syntax/fuzz/corpus/fuzz_roundtrip/: basic.txt
crates/hiko-syntax/fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs  fuzz_roundtrip.rs
crates/hiko-syntax/src/: ast.rs  constfold.rs  desugar.rs  format.rs  intern.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  span.rs  token.rs
crates/hiko-syntax/tests/: proptest_roundtrip.rs  roundtrip.rs
crates/hiko-types/: Cargo.toml
crates/hiko-types/src/: exhaustive.rs  infer.rs  lib.rs  ty.rs
crates/hiko-vm/: Cargo.toml
crates/hiko-vm/benches/: sorted_collections_bench.rs  vm_bench.rs
crates/hiko-vm/examples/: process_creation_cost.rs
crates/hiko-vm/src/: builder.rs  builtins.rs  config.rs  heap.rs  io_backend.rs  lib.rs  policy.rs  process.rs  runtime.rs  runtime_ops.rs  scheduler.rs  sendable.rs  threaded.rs  value.rs  verify.rs  vm.rs
crates/hiko-vm/src/builtins/: aws_config.rs  bytes.rs  convert.rs  date.rs  env.rs  exec.rs  filesystem.rs  hash.rs  http.rs  http_args.rs  json.rs  json_value.rs  math.rs  numeric.rs  path.rs  process.rs  random.rs  regex.rs  stdio.rs  string.rs  support.rs  system.rs  testing.rs  time.rs
crates/hiko-vm/src/builtins/aws/: mod.rs  s3.rs
crates/hiko-vm/src/builtins/hash/: blake3.rs  mod.rs
crates/hiko-vm/src/builtins/http/: mod.rs
crates/hiko-vm/src/vm/: builtins.rs  dispatch.rs  gc.rs  host.rs  mod.rs  runtime_bridge.rs
crates/hiko-vm/tests/: stdlib.rs
crates/tree-sitter-hiko/: Cargo.toml  README.md  build.rs  grammar.js  package.json  tree-sitter.json
crates/tree-sitter-hiko/queries/: highlights.scm
crates/tree-sitter-hiko/src/: grammar.json  lib.rs  node-types.json  parser.c
crates/tree-sitter-hiko/test/corpus/: declarations.txt  effects.txt  modules.txt
docs/: .stuctured-concurrency.md.swp  bootstrap.md  builtin-domains.md  builtins.md  dev-standard.md  error-handling.md  full-builtin-run-config.example.toml  hiko.ebnf  how-to-document-hiko.md  index.md  language-evaluation-prompt.md  modules.md  numerics.md  parquet.md  review-whitepaper.md  runtime.md  rust-memory-layout.md  sml-deltas.md  stuctured-concurrency.md  system.md  verification-status-20260428.md  verification-tla.md  verification.md  vm.md  whitepaper.md
docs/rnd/: iac-demo.md
examples/: agent.policy.toml  aws_s3_list_buckets.hml  benchmark.hml  benchmark.py  binary_tree.hml  closures.hk  closures.hml  cycle_a.hk  cycle_a.hml  cycle_b.hk  cycle_b.hml  dir_walk.hml  double_import.hk  double_import.hml  edit_test.hml  effect_io.hml  effects_and_io.hml  effects_overview.hml  effects_state.hml  either.hk  either.hml  either_test.hk  either_test.hml  env_and_time.hml  error_handling.hml  exceptions.hml  exec_demo.hml  expr_eval.hml  factorial.hk  fibonacci.hml  fibonacci_print.hml  file_io.hml  fizzbuzz.hml  generator.hml  github_api.hml  glob_walk.hml  hashline.hml  hello.hk  http_effect_wrapper.hml  http_effect_wrapper_test.hml  (+44 more)
hiko-vm-hiko-run-all-policy/: Cargo.toml
hiko-vm-hiko-run-all-policy/src/: main.rs
hiko-vm-test-runner-policy/: Cargo.toml
hiko-vm-test-runner-policy/src/: main.rs
libraries/: index.html
libraries/Aws-v0.1.0/: index.html  package.toml
libraries/Aws-v0.1.0/modules/: Config.hml  Config.source.html  S3.hml  S3.source.html  index.html
libraries/Harness-v0.1.0/: index.html  package.toml
libraries/Hash-v0.1.0/: index.html  package.toml
libraries/Http-v0.1.0/: index.html  package.toml
libraries/Std-v0.1.0/: index.html  package.toml
libraries/_assets/: docgen.css
policies/: agent-docs-writer.policy.toml  aws-s3-list-buckets.policy.toml  docs-writer.policy.toml  harness-tools.policy.toml  should-fail-io.policy.toml  software-developer-role.policy.toml  sre-aws-read-role.policy.toml  test-runner.policy.toml  user-repo-full.policy.toml  work-demo-enough.policy.toml  work-demo-tight.policy.toml
prompts/: simplify.md
scripts/: check_tla.hml  release.hml
specs/quint/: ProcessLifecycle.qnt  README.md  ThreadedSchedulerImpl.qnt
specs/tla/: CancelIoRace.tla  CancelIoRaceLive.cfg  CancelIoRaceStaleCompletion.scenario  NumericWidthSemantics.tla  ProcessLifecycle.cfg  ProcessLifecycle.tla  ProcessLifecycleLive.cfg  ThreadedSchedulerImpl.cfg  ThreadedSchedulerImpl.tla  ThreadedSchedulerImplLive.cfg  WaitAnyLeftmost.tla  WaitAnyLeftmostLive.cfg  WaitAnyLeftmostRightNotifier.scenario
stdlib/: either.hml  io.hml  json.hml  list.hml  option.hml
tests/run/: test_date.hml  test_either.hk  test_either.hml  test_fiber.hml  test_fiber_errors.hml  test_fiber_fuel.hml  test_fiber_heap.hml  test_fiber_no_leak.hml  test_hashline.hml  test_list.hk  test_list.hml  test_option.hk  test_option.hml  test_result.hml  test_time.hml
tools/: bash.hml  edit.hml  find.hml  grep.hml  list.hml  read.hml  run_all.hml  write.hml
(+43 files in other folders)
