[workspace]
members = [
    "crates/hiko-docgen",
    "crates/hiko-common",
    "crates/hiko-builtin-meta",
    "crates/hiko-syntax",
    "crates/hiko-types",
    "crates/hiko-compile",
    "crates/hiko-vm",
    "crates/hiko-cli",
    "crates/hiko-harness",
    "crates/tree-sitter-hiko",
]
exclude = ["hiko-vm-*"]
resolver = "2"
