[workspace]

[package]
name = "hiko-vm-test-runner-policy"
version = "0.1.0"
edition = "2024"

[dependencies]
hiko-syntax = { version = "0.5.1", path = "../crates/hiko-syntax" }
hiko-compile = { version = "0.5.1", path = "../crates/hiko-compile" }
hiko-vm = { version = "0.5.1", path = "../crates/hiko-vm" }
