[package]
name = "hiko-cli"
version = "0.5.1"
edition = "2024"
license = "MIT"
description = "hiko-cli: part of the hiko ML-family scripting language"
repository = "https://github.com/vectorian-rs/hiko"

[dependencies]
hiko-syntax = { version = "0.5.1", path = "../hiko-syntax" }
hiko-types = { version = "0.5.1", path = "../hiko-types" }
hiko-compile = { version = "0.5.1", path = "../hiko-compile" }
hiko-vm = { version = "0.5.1", path = "../hiko-vm" }
codespan-reporting = "0.11"
