[package]
name = "hiko-cli"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "hiko-cli: part of the hiko ML-family scripting language"
repository = "https://github.com/vectorian-rs/hiko"

[dependencies]
hiko-builtin-meta = { version = "0.6.0", path = "../hiko-builtin-meta" }
hiko-syntax = { version = "0.6.0", path = "../hiko-syntax" }
hiko-types = { version = "0.6.0", path = "../hiko-types" }
hiko-compile = { version = "0.6.0", path = "../hiko-compile" }
hiko-vm = { version = "0.6.0", path = "../hiko-vm" }
codespan-reporting = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
