[package]
name = "hiko-compile"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "hiko-compile: part of the hiko ML-family scripting language"
repository = "https://github.com/vectorian-rs/hiko"

[dependencies]
hiko-syntax = { version = "0.4.0", path = "../hiko-syntax" }
hiko-types = { version = "0.4.0", path = "../hiko-types" }
