[package]
name = "hiko-syntax"
version = "0.7.0"
edition = "2024"
license = "MIT"
description = "hiko-syntax: part of the hiko ML-family scripting language"
repository = "https://github.com/vectorian-rs/hiko"

[dependencies]
tree-sitter = "0.24"
tree-sitter-hiko = { version = "0.7.0", path = "../tree-sitter-hiko" }

[dev-dependencies]
insta = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "syntax_bench"
harness = false
