[package]
name = "hiko-vm"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "hiko-vm: part of the hiko ML-family scripting language"
repository = "https://github.com/vectorian-rs/hiko"

[dependencies]
hiko-compile = { version = "0.4.0", path = "../hiko-compile" }
hiko-syntax = { version = "0.4.0", path = "../hiko-syntax" }
dryoc = { version = "0.7", default-features = false }
glob = "0.3"
smallvec = "1"
rmp-serde = "1"
serde_json = "1"
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
ureq = "3"

[dev-dependencies]
